fix: fix highlights on mobile

--- a/src/components/ListElement/styles.module.scss
+++ b/src/components/ListElement/styles.module.scss
@@ -25,6 +25,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       cursor: pointer;
+      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     }
 
     button {
@@ -41,6 +42,7 @@
       border-radius: 4px;
       margin-right: 5px;
       cursor: pointer;
+      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
       &:hover {
         background-color: rgb(155, 155, 145);
@@ -55,6 +57,7 @@
     min-height: 20px;
     margin: 0 3px;
     cursor: pointer;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
     &.green {
       color: $green;
@@ -76,6 +79,7 @@
     color: #ffffff;
     padding: 4px;
     cursor: pointer;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   }
 
   .priority {
