--- a/src/components/Title/styles.module.scss
+++ b/src/components/Title/styles.module.scss
@@ -27,6 +27,7 @@
 
     .option {
       margin-right: 5px;
+      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
       &:last-child {
         margin-right: 0px;
